--- a/reactver/src/assets/css/Info2.module.css
+++ b/reactver/src/assets/css/Info2.module.css
@@ -1,17 +1,16 @@
-@charset "utf-8";
-
 /* content
 --------------------------------------- */
-#content {
+.content {
     width: 300px;
     margin: auto;
     font-size: 0.8em;
     line-height: 150%;
+    margin-bottom: ;
 }
 
 /* content >  소제목
 --------------------------------------- */
-#content h2 {
+.contentH2 {
     height: 90px;
     background: url(../img/top_ca1.jpg) no-repeat;
     margin-top: 15px;
@@ -20,24 +19,24 @@
 
 /* content 갤러리
 --------------------------------------- */
-#content ul li {
+.contentLi {
     width: 33.3%;
     float: left;
 }
 
-#content ul::after {
+.contentUl::after {
     content: '';
     display: block;
     float: none;
     clear: both;
 }
 
-#content ul li a {
+.contentLink {
     display: block;
     width: auto;
     padding: 5px;
 }
 
-#content ul li a img {
+.contentImg {
     width: 100%;
 }
