--- a/reactver/src/assets/css/tab.module.css
+++ b/reactver/src/assets/css/tab.module.css
@@ -19,7 +19,7 @@
 
 /* tab > float 해제
 -------------------------------------- */
-div#tab > ul::after {
+.tabUl::after {
     content: '';
     display: block;
     float: none;
@@ -38,14 +38,14 @@ div#tab > ul::after {
 
 /* tab > bt set > 개별항목 > menu
 -------------------------------------- */
-div#tab > ul > li.active {
+.tabLi.active {
     background: url(../img/bg_tab_left.gif) left 10px no-repeat;
 
 }
 
 /* tab > bt set > 개별항목 > menu > link
 -------------------------------------- */
-div#tab > ul > li.active > a {
+.tabLi.activeLink {
     background: url(../img/bg_tab_right.gif) right 10px no-repeat;
     color: #000;
 }
