--- a/reactver/src/assets/css/active.css
+++ b/reactver/src/assets/css/active.css
@@ -1,6 +1,4 @@
 .active {
-    background: url(../img/bg_tab_left.gif) 10px no-repeat;
-    background: url(../img/bg_tab_left.gif) right 10px no-repeat;
+    background: url(../img/bg_tab.png) center 10px no-repeat;
     color: #000;
 }
-
